--- a/udacity_project_1.ipynb
+++ b/udacity_project_1.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#udacity Project 1"
+    "#Udacity Project 1\n",
+    "#At this porject I will make a data analysis about the births in Quebec Province-Canada\n",
+    "#Between the years 2013-2020"
    ]
   },
   {
@@ -15,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get libraires\n",
     "import pandas as pd \n",
     "import numpy as np"
    ]
@@ -26,12 +29,13 @@
    "outputs": [],
    "source": [
     "#load data\n",
-    "#first analysis"
+    "'''I decided to upload the separate files because my focus is analysis and not the standardization of the data format\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,15 +101,16 @@
        "13--Laval                                            4309"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#number of births 5max by region\n",
+    "#load the file\n",
     "df2013_2014=pd.read_csv('s152013-2014.csv')\n",
     "df2013_2014.shape\n",
+    "#show the 5 regions with more births\n",
     "df2013_2014[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -173,7 +178,8 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
+    "\n",
     "df2013_2014[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
   },
@@ -251,10 +257,12 @@
     }
    ],
    "source": [
-    "#number of births 5max by region\n",
+    "#load the file\n",
     "\n",
     "df2014_2015=pd.read_csv('s152014-2015.csv')\n",
     "df2014_2015.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2014_2015[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -322,7 +330,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "df2014_2015[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
   },
@@ -400,10 +408,12 @@
     }
    ],
    "source": [
-    "#number of births 5max by region\n",
+    "#load the file\n",
     "\n",
     "df2015_2016=pd.read_csv('s152015-2016.csv')\n",
     "df2015_2016.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2015_2016[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -471,7 +481,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "\n",
     "df2015_2016[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
@@ -550,10 +560,12 @@
     }
    ],
    "source": [
-    "#number of births 5max by region\n",
+    "#load the file\n",
     "\n",
     "df2016_2017=pd.read_csv('s152016-2017.csv')\n",
     "df2016_2017.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2016_2017[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -621,7 +633,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "\n",
     "df2016_2017[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
@@ -700,10 +712,12 @@
     }
    ],
    "source": [
-    "#number of births 5max by region\n",
+    "#load the file\n",
     "\n",
     "df2017_2018=pd.read_csv('s15-distribution-accouchements---region-de-traitement 2017-2018.csv')\n",
     "df2017_2018.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2017_2018[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -771,7 +785,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "\n",
     "df2017_2018[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
@@ -854,6 +868,8 @@
     "\n",
     "df2018_2019=pd.read_csv('s15-distribution-accouchements---region-de-traitement-2018-2019.csv')\n",
     "df2018_2019.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2018_2019[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -921,7 +937,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "\n",
     "df2018_2019[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
@@ -1002,9 +1018,11 @@
    "source": [
     "#number of births 5max by region\n",
     "\n",
-    "df2019_2020=pd.read_csv('s15-distribution-accouchements---region-de-traitement 2019-2020.csv',encoding='latin-1')#here I hd a encodiing problem\n",
+    "df2019_2020=pd.read_csv('s15-distribution-accouchements---region-de-traitement 2019-2020.csv',encoding='latin-1')#here I had a encoding problem\n",
     "\n",
     "df2019_2020.shape\n",
+    "#show the 5 regions with more births\n",
+    "\n",
     "df2019_2020[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN',ascending=False)[1:6]"
    ]
   },
@@ -1072,7 +1090,7 @@
     }
    ],
    "source": [
-    "#number of births 3 min by region\n",
+    "#show the 3 regions with fewer births\n",
     "\n",
     "df2019_2020[['REGION','NBR_ACCOUCH_ET_CESARIEN']].groupby(by='REGION').max().sort_values(by='NBR_ACCOUCH_ET_CESARIEN')[0:3]"
    ]
@@ -2142,15 +2160,19 @@
     }
    ],
    "source": [
-    "# 10max cesarean sections by region and period in %\n",
+    "# 10 highest cesarean rates by period and region in %\n",
     "\n",
     "\n",
-    "\n",
+    "'''creation of the new variable '% CESARIENNES' made with the division of 2 existing variables\n",
+    "'''\n",
     "df_only_regions['%CESARIENNES']=round(df_only_regions['NBR_CESARIENNES']/df_only_regions['NBR_ACCOUCH_ET_CESARIEN']*100,2)\n",
+    "\n",
+    "'''creation of the new variable '% MORTINAISSANC' made with the division of 2 already existing variables.\n",
+    "Will be used in the next steps'''\n",
     "\n",
     "df_only_regions['%MORTINAISSANC']=round(df_only_regions['NBR_MORTINAISSANC']/df_only_regions['NBR_ACCOUCH_ET_CESARIEN']*100,2)\n",
     "\n",
-    "\n",
+    "'''show in descending order'''\n",
     "df_only_regions[['PERIODE','REGION','NBR_ACCOUCH_ET_CESARIEN','%CESARIENNES']].sort_values(by='%CESARIENNES',ascending=False)[0:10]\n",
     "\n",
     "\n",
@@ -2296,7 +2318,7 @@
     }
    ],
    "source": [
-    "# 10min cesarean sections by region and period in %\n",
+    "# 10 lowest cesarean rates by region and period in %\n",
     "\n",
     "\n",
     "df_only_regions[['PERIODE','REGION','NBR_ACCOUCH_ET_CESARIEN','%CESARIENNES']].sort_values(by='%CESARIENNES',ascending=True)[0:10]\n"
@@ -2441,7 +2463,7 @@
     }
    ],
    "source": [
-    "#10 max deaths at birth bu region and period\n",
+    "# 10 highest mortality rates by period and region in %\n",
     "\n",
     "df_only_regions[['PERIODE','REGION','NBR_ACCOUCH_ET_CESARIEN','%MORTINAISSANC']].sort_values(by='%MORTINAISSANC',ascending=False)[0:10]\n"
    ]
@@ -2585,7 +2607,7 @@
     }
    ],
    "source": [
-    "#10 min deaths at birth bu region and period\n",
+    "# 10 lowest mortality rates by period and region in %\n",
     "\n",
     "df_only_regions[['PERIODE','REGION','NBR_ACCOUCH_ET_CESARIEN','%MORTINAISSANC']].sort_values(by='%MORTINAISSANC',ascending=True)[0:10]\n"
    ]
@@ -2756,6 +2778,8 @@
     }
    ],
    "source": [
+    "#simple barchart for give a visual idea\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "data = {'2013-2014': 83968, '2014-2015': 82369, '2015-2016': 81950, '2016-2017': 80505, '2017-2018':78758 ,\n",
@@ -2787,7 +2811,8 @@
     }
    ],
    "source": [
-    "#increse 2 last periods (2013-2014 to 2014-2015)\n",
+    "#calculation of the variation between the periods 2013-14\n",
+    "#decrease 2 last periods (2013-2014 to 2014-2015)\n",
     "print('decrease ',round(((83968/82369)-1)*100,2),'%')\n"
    ]
   },
@@ -2805,7 +2830,8 @@
     }
    ],
    "source": [
-    "#increse 2 last periods (2014-2015 to 2015-2016)\n",
+    "#calculation of the variation between the periods 2014-15\n",
+    "#decrease 2 last periods (2014-2015 to 2015-2016)\n",
     "print('decrease ',round(((82369/81950)-1)*100,2),'%')\n"
    ]
   },
@@ -2823,7 +2849,8 @@
     }
    ],
    "source": [
-    "#increse 2 last periods (2015-2016 to 2016-2017)\n",
+    "#calculation of the variation between the periods 2015-16\n",
+    "#decrease 2 last periods (2015-2016 to 2016-2017)\n",
     "print('decrease ',round(((81950/80505)-1)*100,2),'%')\n"
    ]
   },
@@ -2841,7 +2868,8 @@
     }
    ],
    "source": [
-    "#increse 2 last periods (2016-2017 to 2017-2018)\n",
+    "#calculation of the variation between the periods 2016-17\n",
+    "#decrease 2 last periods (2016-2017 to 2017-2018)\n",
     "print('decrease ',round(((80505/78758)-1)*100,2),'%')\n"
    ]
   },
@@ -2859,7 +2887,8 @@
     }
    ],
    "source": [
-    "#increse 2 last periods (2018-2019 to 2019-2020)\n",
+    "#calculation of the variation between the periods 2018-19\n",
+    "#increase 2 last periods (2018-2019 to 2019-2020)\n",
     "print('increase ',round(((79891/79000)-1)*100,2),'%')\n"
    ]
   },
@@ -2877,6 +2906,7 @@
     }
    ],
    "source": [
+    "#my guess\n",
     "#more 50% increase rate because covid-19 pandemic\n",
     "print('increase forecast ',round(((79891/79000)-1)*100*1.5,2),'%')\n"
    ]
@@ -2898,7 +2928,7 @@
     }
    ],
    "source": [
-    "#if the same conitions rest \n",
+    "#if the same conditions rest \n",
     "\n",
     "round(79891*1.017)\n",
     "\n",
