--- a/udacity_project_1.ipynb
+++ b/udacity_project_1.ipynb
@@ -13,6 +13,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Questions\n",
+    "Quebec is divided into 17 administrative regions.\n",
+    "The questions I intend to answer are:\n",
+    "1) 5 regions with more births in each period\n",
+    "2) 3 regions with fewer births in each period\n",
+    "3) Regions and periods where mortality at birth was highest\n",
+    "4) Regions and periods where mortality at birth was lower\n",
+    "5) Regions and periods where there were more births with caesarean section\n",
+    "6) Regions and periods where there were fewer births with caesarean section\n",
+    "7) Overview of the province\n",
+    "8) Bonus: 2020–2021 birth prediction based on the variation of the last two periods'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
