--- a/udacity_project_1.ipynb
+++ b/udacity_project_1.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "09--Côte-Nord                                            879"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "14--Lanaudière                                       4227"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "09--Côte-Nord                                            869"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "14--Lanaudière                                       4214"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "09--Côte-Nord                                            815"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "05 Estrie                                           4445"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "09 Côte-Nord                                          771"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "04 Mauricie et Centre-du-Québec                     4293"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "09 Côte-Nord                                          799"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "14 Lanaudière                                       4423"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "09 Côte-Nord                                          755"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "14 Lanaudière                                       4363"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2818,26 +2818,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decrease  1.94 %\n"
+      "decrease  1.9 %\n"
      ]
     }
    ],
    "source": [
     "#calculation of the variation between the periods 2013-14\n",
     "#decrease 2 last periods (2013-2014 to 2014-2015)\n",
-    "print('decrease ',round(((83968/82369)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((82369/83968)-1)*100,2),'%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2851,50 +2851,69 @@
    "source": [
     "#calculation of the variation between the periods 2014-15\n",
     "#decrease 2 last periods (2014-2015 to 2015-2016)\n",
-    "print('decrease ',round(((82369/81950)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((81950/82369)-1)*100,2),'%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decrease  1.79 %\n"
+      "decrease  1.76 %\n"
      ]
     }
    ],
    "source": [
     "#calculation of the variation between the periods 2015-16\n",
     "#decrease 2 last periods (2015-2016 to 2016-2017)\n",
-    "print('decrease ',round(((81950/80505)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((80505/81950)-1)*100,2),'%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decrease  2.22 %\n"
+      "decrease  2.17 %\n"
      ]
     }
    ],
    "source": [
     "#calculation of the variation between the periods 2016-17\n",
     "#decrease 2 last periods (2016-2017 to 2017-2018)\n",
-    "print('decrease ',round(((80505/78758)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((78758/80505)-1)*100,2),'%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "increase  0.31 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculation of the variation between the periods 2017-18\n",
+    "#decrease 2 last periods (2017-2018 to 2018-2019)\n",
+    "print('increase ',round(((79000/78758)-1)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2906,14 +2925,33 @@
     }
    ],
    "source": [
-    "#calculation of the variation between the periods 2018-19\n",
+    "#calculation of the variation between the periods 2019-20\n",
     "#increase 2 last periods (2018-2019 to 2019-2020)\n",
     "print('increase ',round(((79891/79000)-1)*100,2),'%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decrease  -4.86 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#between first and last periods \n",
+    "#variation 2013-2014 to 2019-2020\n",
+    "print('decrease ',round(((79891/83968)-1)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2971,7 +3009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
