--- a/udacity_project_1.ipynb
+++ b/udacity_project_1.ipynb
@@ -2830,14 +2830,81 @@
     }
    ],
    "source": [
-    "#calculation of the variation between the periods 2013-14\n",
+    "'''#calculation of the variation between the periods 2013-14\n",
     "#decrease 2 last periods (2013-2014 to 2014-2015)\n",
-    "print('decrease ',round(abs((82369/83968)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((82369/83968)-1)*100,2),'%')\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def variation_between_periords(initial_period,final_period,initial_value,final_value):\n",
+    "    '''this fonction calculate the variation in percentage between 2 periods and show the variation between the given periods\n",
+    "    input(4 values): number of births in initial period and number of births in final period,initial period,final period\n",
+    "    output(1 value): percentual of variation between two given periods with 2 decimal numbers\n",
+    "    '''\n",
+    "    var = round(((final_value/initial_value)-1)*100,2)\n",
+    "    if var > 0:\n",
+    "        print('Variation between the periods: /n',initial_period,'-',final_period,': Increase',var,'%')\n",
+    "    elif var == 0:\n",
+    "        print('Variation between the periods: /n',initial_period,'-',final_period,': Stable',var,'%')\n",
+    "    else:\n",
+    "        print('Variation between the periods: ',\n",
+    "              '\\n ', initial_period,'-',final_period,': Decrease',abs(var),'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variation between the periods:  \n",
+      "  2013 - 2014 : Decrease 1.9 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculation of the variation between the periods 2013-14\n",
+    "\n",
+    "variation_between_periords(2013,2014,83968,82369)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decrease 0.51 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculation of the variation between the periods 2014-15\n",
+    "variation_between_periords(82369,81950)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2849,9 +2916,10 @@
     }
    ],
    "source": [
-    "#calculation of the variation between the periods 2014-15\n",
+    "'''#calculation of the variation between the periods 2014-15\n",
     "#decrease 2 last periods (2014-2015 to 2015-2016)\n",
-    "print('decrease ',round(abs((81950/82369)-1)*100,2),'%')\n"
+    "print('decrease ',round(abs((81950/82369)-1)*100,2),'%')\n",
+    "'''"
    ]
   },
   {
@@ -3009,7 +3077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
