--- a/udacity_project_1.ipynb
+++ b/udacity_project_1.ipynb
@@ -76,6 +76,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Raw data\n",
+    "#The raw data looks like this\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NUMEROTATION</th>\n",
+       "      <th>TYPE_SOINS</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>NBR_ACCOUCH_ET_CESARIEN</th>\n",
+       "      <th>NBR_CESARIENNES</th>\n",
+       "      <th>NBR_NAISS_VIVANT</th>\n",
+       "      <th>NBR_MORTINAISSANC</th>\n",
+       "      <th>TITRE_RAPPORT</th>\n",
+       "      <th>PERIODE</th>\n",
+       "      <th>DATE_PRODUCTION</th>\n",
+       "      <th>NOTE1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Soins physiques et psychiatriques de courte durée</td>\n",
+       "      <td>01--Bas-Saint-Laurent</td>\n",
+       "      <td>1664</td>\n",
+       "      <td>370</td>\n",
+       "      <td>1676</td>\n",
+       "      <td>3</td>\n",
+       "      <td>S15 – Distribution des accouchements  césarien...</td>\n",
+       "      <td>Entre 2013-04-01 et 2014-03-31</td>\n",
+       "      <td>8 janvier 2015</td>\n",
+       "      <td>LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Soins physiques et psychiatriques de courte durée</td>\n",
+       "      <td>02--Saguenay - Lac-Saint-Jean</td>\n",
+       "      <td>2704</td>\n",
+       "      <td>612</td>\n",
+       "      <td>2744</td>\n",
+       "      <td>5</td>\n",
+       "      <td>S15 – Distribution des accouchements  césarien...</td>\n",
+       "      <td>Entre 2013-04-01 et 2014-03-31</td>\n",
+       "      <td>8 janvier 2015</td>\n",
+       "      <td>LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Soins physiques et psychiatriques de courte durée</td>\n",
+       "      <td>03--Capitale-Nationale</td>\n",
+       "      <td>8573</td>\n",
+       "      <td>2362</td>\n",
+       "      <td>8715</td>\n",
+       "      <td>37</td>\n",
+       "      <td>S15 – Distribution des accouchements  césarien...</td>\n",
+       "      <td>Entre 2013-04-01 et 2014-03-31</td>\n",
+       "      <td>8 janvier 2015</td>\n",
+       "      <td>LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Soins physiques et psychiatriques de courte durée</td>\n",
+       "      <td>04--Mauricie et Centre-du-Québec</td>\n",
+       "      <td>4789</td>\n",
+       "      <td>902</td>\n",
+       "      <td>4830</td>\n",
+       "      <td>17</td>\n",
+       "      <td>S15 – Distribution des accouchements  césarien...</td>\n",
+       "      <td>Entre 2013-04-01 et 2014-03-31</td>\n",
+       "      <td>8 janvier 2015</td>\n",
+       "      <td>LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Soins physiques et psychiatriques de courte durée</td>\n",
+       "      <td>05--Estrie</td>\n",
+       "      <td>3020</td>\n",
+       "      <td>620</td>\n",
+       "      <td>3057</td>\n",
+       "      <td>12</td>\n",
+       "      <td>S15 – Distribution des accouchements  césarien...</td>\n",
+       "      <td>Entre 2013-04-01 et 2014-03-31</td>\n",
+       "      <td>8 janvier 2015</td>\n",
+       "      <td>LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   NUMEROTATION                                         TYPE_SOINS  \\\n",
+       "0             1  Soins physiques et psychiatriques de courte durée   \n",
+       "1             2  Soins physiques et psychiatriques de courte durée   \n",
+       "2             3  Soins physiques et psychiatriques de courte durée   \n",
+       "3             4  Soins physiques et psychiatriques de courte durée   \n",
+       "4             5  Soins physiques et psychiatriques de courte durée   \n",
+       "\n",
+       "                             REGION  NBR_ACCOUCH_ET_CESARIEN  NBR_CESARIENNES  \\\n",
+       "0             01--Bas-Saint-Laurent                     1664              370   \n",
+       "1     02--Saguenay - Lac-Saint-Jean                     2704              612   \n",
+       "2            03--Capitale-Nationale                     8573             2362   \n",
+       "3  04--Mauricie et Centre-du-Québec                     4789              902   \n",
+       "4                        05--Estrie                     3020              620   \n",
+       "\n",
+       "   NBR_NAISS_VIVANT  NBR_MORTINAISSANC  \\\n",
+       "0              1676                  3   \n",
+       "1              2744                  5   \n",
+       "2              8715                 37   \n",
+       "3              4830                 17   \n",
+       "4              3057                 12   \n",
+       "\n",
+       "                                       TITRE_RAPPORT  \\\n",
+       "0  S15 – Distribution des accouchements  césarien...   \n",
+       "1  S15 – Distribution des accouchements  césarien...   \n",
+       "2  S15 – Distribution des accouchements  césarien...   \n",
+       "3  S15 – Distribution des accouchements  césarien...   \n",
+       "4  S15 – Distribution des accouchements  césarien...   \n",
+       "\n",
+       "                          PERIODE  DATE_PRODUCTION  \\\n",
+       "0  Entre 2013-04-01 et 2014-03-31   8 janvier 2015   \n",
+       "1  Entre 2013-04-01 et 2014-03-31   8 janvier 2015   \n",
+       "2  Entre 2013-04-01 et 2014-03-31   8 janvier 2015   \n",
+       "3  Entre 2013-04-01 et 2014-03-31   8 janvier 2015   \n",
+       "4  Entre 2013-04-01 et 2014-03-31   8 janvier 2015   \n",
+       "\n",
+       "                                              NOTE1   \n",
+       "0  LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...  \n",
+       "1  LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...  \n",
+       "2  LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...  \n",
+       "3  LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...  \n",
+       "4  LES INTERVENTIONS QUI CONSTITUENT DES ABANDONS...  "
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2013_2014=pd.read_csv('s152013-2014.csv')\n",
+    "df2013_2014.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The data was downloaded in .csv format.\n",
+    "### The tables are small and there is no missing data.\n",
+    "### However there are columns that we will not use in this analysis\n",
+    "### What interests us are the following fields\n",
+    "### REGION\n",
+    "### NBR_ACCOUCH_ET_CESARIEN\n",
+    "### NBR_CESARIENNES\n",
+    "### NBR_NAISS_VIVANT \n",
+    "### BR_MORTINAISSANC \n",
+    "### PERIODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some data format changes will be made in future steps."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -1397,6 +1598,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here I standardized the fields TYPE_SOINS and TYPE_DE_SOINS that bring the same information but are written in different ways.\n",
+    "### Also filter by the category present in all datasets ('' Soins physiques et psychiatriques de courte durée '')."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -2398,12 +2607,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_provincial['YEAR']=df_provincial.PERIODE.str[5:9]\n"
+    "### At this point I created an auxiliary variable called 'YEAR' and a summary df that will be used later to calculate the birth variations between the years"
    ]
   },
   {
@@ -2629,7 +2836,8 @@
     }
    ],
    "source": [
-    "summary_table=df_provincial[['YEAR','NBR_ACCOUCH_ET_CESARIEN']]#.sort_values(by='YEAR')\n",
+    "#summary df\n",
+    "summary_table=df_provincial[['YEAR','NBR_ACCOUCH_ET_CESARIEN']]\n",
     "summary_table\n"
    ]
   },
@@ -2670,6 +2878,13 @@
     "\n",
     "fig.suptitle('births in Quebec province by period')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The data format was a string, I converted them to int because I will do the math in the next steps"
    ]
   },
   {
